[gd_scene load_steps=11 format=3 uid="uid://ba28b37b0txm2"]

[ext_resource type="Texture2D" uid="uid://bpfb3kel8rnoy" path="res://assets/art/card template.png" id="1_jh4o3"]
[ext_resource type="Script" path="res://scenes/cards forms/metal card/metal_card.gd" id="2_rjgar"]
[ext_resource type="Texture2D" uid="uid://fmduotbecrad" path="res://assets/art/card template_clipmask.png" id="3_bdwao"]
[ext_resource type="Texture2D" uid="uid://dk4oidnsr2ee6" path="res://assets/icon.svg" id="4_k2e84"]
[ext_resource type="FontFile" uid="uid://btyyh6k3pmif6" path="res://assets/fonts/Kenney Bold.ttf" id="5_m3vvk"]
[ext_resource type="FontFile" uid="uid://dgj3vguhfstb7" path="res://assets/fonts/Kenney Rocket Square.ttf" id="6_a106o"]
[ext_resource type="FontFile" uid="uid://cc0u1c6ap7xi0" path="res://assets/fonts/Kenney Mini Square Mono.ttf" id="7_e3y3c"]

[sub_resource type="Gradient" id="Gradient_0yhwl"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_pxjx3"]
gradient = SubResource("Gradient_0yhwl")
width = 235

[sub_resource type="GDScript" id="GDScript_2dlkr"]
script/source = "extends Node

### Card resolution is around 48 x 62 units
### ▞  <- this symbol is rad
### ◤◢◤◢◤◢◤◢ so are these
### ░░░
"

[node name="MetalCard" type="Control" groups=["cards"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -940.0
offset_bottom = -260.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_rjgar")

[node name="ColorFill" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 500.0
offset_bottom = 600.0
texture = ExtResource("1_jh4o3")

[node name="PortraitMask" type="TextureRect" parent="."]
clip_children = 1
layout_mode = 2
offset_right = 500.0
offset_bottom = 600.0
texture = ExtResource("3_bdwao")
metadata/_edit_group_ = true

[node name="Background" type="TextureRect" parent="PortraitMask"]
modulate = Color(0.741176, 0.85098, 0.87451, 1)
layout_mode = 1
offset_right = 255.0
offset_bottom = 1.0
scale = Vector2(1.95703, 388)
texture = SubResource("GradientTexture1D_pxjx3")

[node name="Portrait" type="TextureRect" parent="PortraitMask"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.4
anchor_right = 0.5
anchor_bottom = 0.4
offset_left = -226.0
offset_top = -232.0
offset_right = 230.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_k2e84")
expand_mode = 5
stretch_mode = 3

[node name="NOTE" type="Node" parent="."]
script = SubResource("GDScript_2dlkr")

[node name="CostLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 344.0
offset_top = 79.0
offset_right = 504.0
offset_bottom = 178.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("5_m3vvk")
theme_override_font_sizes/font_size = 64
text = "4
"
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 24.0
offset_top = 16.0
offset_right = 344.0
offset_bottom = 115.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("5_m3vvk")
theme_override_font_sizes/font_size = 64
text = "Blank
"

[node name="TypeLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 24.0
offset_top = 368.0
offset_right = 472.0
offset_bottom = 411.0
theme_override_fonts/font = ExtResource("6_a106o")
theme_override_font_sizes/font_size = 32
text = "ITEM"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_group_ = true

[node name="InfoLabel" type="RichTextLabel" parent="."]
layout_mode = 2
offset_left = 38.0
offset_top = 422.0
offset_right = 454.0
offset_bottom = 566.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("7_e3y3c")
theme_override_font_sizes/normal_font_size = 20
text = "This card has no function"
scroll_active = false

[node name="MiscLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 400.0
offset_top = 552.0
offset_right = 488.0
offset_bottom = 591.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
text = "▞▞▞"
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true
